--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
             <artifactId>transport</artifactId>
             <version>6.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.turing.nlp</groupId>
+            <artifactId>nlp-data-dubbo-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
