--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
             <artifactId>nlp-data-dubbo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.turing.nlp</groupId>
+            <artifactId>platform-nlp-faq-dubbo-api</artifactId>
+            <version>2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
